--- a/portfolio.html
+++ b/portfolio.html
@@ -14,12 +14,14 @@
 
     <!-- Bootstrap Core CSS ––––––––––––––––––––––––––– -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <!-- Custom CSS ––––––––––––––––––––––––––– -->
     <link href="css/style.css" rel="stylesheet">
     <!-- fontawesome ––––––––––––––––––––––––––– -->
     <script src="https://kit.fontawesome.com/5c9f2dfb26.js"></script>
     <script src="js/scripts.js"></script>
+    <script src="js/animation.js"></script>
     <!-- To add google fonts and paste the link here -->
 
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap" rel="stylesheet">
@@ -34,8 +36,7 @@
     <div class="containter pt-5 pl-5 pr-5">
         <div class="row pt-5 padding">
             <div class="col-lg-2">
-
-                <ul class="text-center" style="list-style-type:none;">
+                <ul class="text-right" style="list-style-type:none;">
                     <li>
                         <p style="font-size:2rem;">CHRIS LEE</p>
                     </li>
@@ -44,99 +45,85 @@
                     <li><a href="portfolio.html">Projects</a></li>
                     <li>Experience</li>
                     <li><a href="about.html">About Me</a></li>
-                    <li><a href="contact.html">Contact Me</a></li>
+                    <li>Contact Me</li>
                 </ul>
-
-
             </div>
-            <div class="col-lg-10 ">
-                <div class="row row-padding ">
+            <div class="col-lg-10">
+                <div class="row row-padding">
 
-                    <!-- <div class="row "> -->
-                    <div class="column col-lg-4 ">
-                        <img src="img/shoe1.jpg " onclick="openModal();currentSlide(1) " class="hover-shadow ">
+                    <!-- <div class="row"> -->
+                    <div class="column col-lg-4">
+                        <img src="img/3.jpg" onclick="openModal();currentSlide(1)" class="hover-shadow">
                     </div>
-                    <div class="column col-lg-4 ">
-                        <img src="img/9.jpg " onclick="openModal();currentSlide(2) " class="hover-shadow ">
+                    <div class="column col-lg-4">
+                        <img src="img/9.jpg" onclick="openModal();currentSlide(2)" class="hover-shadow">
                     </div>
-                    <div class="column col-lg-4 ">
-                        <img src="img/10.png " onclick="openModal();currentSlide(3) " class="hover-shadow ">
+                    <div class="column col-lg-4">
+                        <img src="img/10.png" onclick="openModal();currentSlide(3)" class="hover-shadow">
                     </div>
 
                 </div>
 
-                <div class="row row-padding ">
-                    <!-- <div class="row "> -->
-                    <div class="column col-lg-4 ">
-                        <img src="img/11.jpg " onclick="openModal();currentSlide(4) " class="hover-shadow ">
+                <div class="row row-padding">
+                    <!-- <div class="row"> -->
+                    <div class="column col-lg-4">
+                        <img src="img/11.jpg" onclick="openModal();currentSlide(4)" class="hover-shadow">
                     </div>
                 </div>
             </div>
 
             <!-- The Modal/Lightbox -->
-            <div id="myModal " class="modal padding ">
+            <div id="myModal" class="modal">
 
 
-                <span class="close cursor " onclick="closeModal() ">&times;</span>
+                <span class="close cursor" onclick="closeModal()">&times;</span>
 
-                <div class="containter pt-5 pl-5 pr-5 ">
-                    <div class="row pt-5 ">
-                        <div class="col-lg-6 ">
+                <div class="containter pt-5 pl-5 pr-5">
+                    <div class="row pt-5 padding">
+                        <div class="col-lg-6">
 
-                            <div class="modal-content ">
+                            <div class="modal-content">
 
-                                <div class="mySlides ">
-                                    <div class="numbertext ">1 / 4</div>
-                                    <img src="img/shoe1.jpg " style="width:100% " alt="This is image number one. ">
+                                <div class="mySlides">
+                                    <div class="numbertext">1 / 4</div>
+                                    <img src="img/3.jpg" style="width:100%" alt="This is image number one. ">
                                 </div>
 
-                                <div class="mySlides ">
-                                    <div class="numbertext ">2 / 4</div>
-                                    <img src="img/9.jpg " style="width:100% " alt="This is image number two. ">
+                                <div class="mySlides">
+                                    <div class="numbertext">2 / 4</div>
+                                    <img src="img/9.jpg" style="width:100%" alt="This is image number two.">
                                 </div>
 
-                                <div class="mySlides ">
-                                    <div class="numbertext ">3 / 4</div>
-                                    <img src="img/10.png " style="width:100% " alt="This is image number three. ">
+                                <div class="mySlides">
+                                    <div class="numbertext">3 / 4</div>
+                                    <img src="img/10.png" style="width:100%" alt="This is image number three.">
                                 </div>
 
-                                <div class="mySlides ">
-                                    <div class="numbertext ">4 / 4</div>
-                                    <img src="img/11.jpg " style="width:100% " alt="This is image number four. ">
+                                <div class="mySlides">
+                                    <div class="numbertext">4 / 4</div>
+                                    <img src="img/11.jpg" style="width:100%" alt="This is image number four.">
                                 </div>
 
                                 <!-- Next/previous controls -->
-                                <a class="prev " onclick="plusSlides(-1) ">&#10094;</a>
-                                <a class="next " onclick="plusSlides(1) ">&#10095;</a>
+                                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                                <a class="next" onclick="plusSlides(1)">&#10095;</a>
 
 
                             </div>
                         </div>
 
 
-                        <div class="col-lg-6 ">
-                            <div class="demo ">
-                                <p><br/>FILA Ray Tracer Sneaker </br> $ 75 </br> <i>Details </br> 
-                                    Product Sku: 49278781 ; Color Code: 023 </br> 
-                                </br>  </br> 
-                                    Combine retro design with modern chunky style wearing this FILA sneaker. Suede + leather upper with embroidered FILA branding on the tongue, vamp and back counter. Complete with a cushioned EVA foam midsole and thick rubber bottom.
-                                </br>  </br> 
-                                    Content + Care </br> 
-                                    - Upper: suede, leather, textile </br> 
-                                    - Outsole: 100% rubber </br> 
-                                    - Spot clean </br> 
-                                    - Imported </br> 
-                                </br> 
-                                    Size + Fit </br> 
-                                    - lgall to fit; order ½ size up </i></p>
+                        <div class="col-lg-6">
+                            <div class="demo">
+                                <p><br/> <i>Seulgi </i><br/> Procreate of iPad pro <br/> This is a practice of a more rough, sketch style, focusing on making the image more animated rather than flat and rough. </p>
                             </div>
-                            <div class="demo ">
+                            <div class="demo">
                                 <p><br/> <i>Untitled </i><br/>Procreate of iPad pro <br/> I drew this image on the beach, inspired by the colors of nature... </p>
                             </div>
-                            <div class="demo ">
+                            <div class="demo">
                                 <p><br/> <i>Untitled </i> <br/>Procreate of iPad pro <br/> A practice that I did to practice drawing jewelry on people.</p>
                             </div>
-                            <div class="demo ">
+                            <div class="demo">
                                 <p><br/> <i>Untitled </i> <br/>Procreate of iPad pro <br/> A practice piece to practice a more illustration, almost story-book style.</p>
                             </div>
 
@@ -151,16 +138,9 @@
         </div>
     </div>
 
-    <footer class="text-center ">
-        <a href="https://joylee.herokuapp.com " target="_blank ">Created by Joyce Lee | 2019</a>
+    <footer class="text-center">
+        <a href="https://joylee.herokuapp.com" target="_blank">Created by Joyce Lee | 2019</a>
     </footer>
-
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js "></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js " integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1 " crossorigin="anonymous "></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js " integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM " crossorigin="anonymous "></script>
-
-
 </body>
 
 </html>
