--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
     <meta name="description" content="">
     <meta name="keywords" content="">
     <meta name="author" content="">
-    <title>About</title>
+    <title>Portfolio</title>
 
     <!-- Bootstrap Core CSS ––––––––––––––––––––––––––– -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -57,7 +57,7 @@
                         </nav>
         
             </div>
-            <div class="col-lg-10 ">
+            <div class="col-lg-10 contact ">
                 <div class="row row-padding ">
 
                     <!-- <div class="row "> -->
