--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
                         </nav>
         
             </div>
-            <div class="col-lg-10 ">
+            <div class="col-lg-10 contact ">
                 <p>My name is Chris Lee, and I am a Sophomore studying Computer Science at Rice University of Houston, Texas. Feel free to check out my projects and experience and reach out to me if you have any questions! Or if you want to chat. I am current
                     seeking a summer software engineering internship. Some of my passions outside of comuter science are making music and swimming.</p>
                 <br/>
