--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     <meta name="description" content="">
     <meta name="keywords" content="">
     <meta name="author" content="">
-    <title>About</title>
+    <title>Contact Me</title>
 
     <!-- Bootstrap Core CSS ––––––––––––––––––––––––––– -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -60,7 +60,7 @@
             <div class="col-lg-10 container contact ">
                 <p>Contact</p>
 
-                <p>For commissions, inquiries, et malesuada fames ac ante ipsum primis in faucibus. Nam ultricies, ante nec porttitor sagittis, urna nibh ultrices neque, ut finibus nisi odio nec nibh.</p>
+                <p>For commissions and inquiries, fill out this form, and I will get to you as soon as possible!</p>
 
                 <script type="text/javascript " src="https://form.jotform.com/jsform/93214432023141 "></script>
             </div>
