--- a/about.html
+++ b/about.html
@@ -70,9 +70,9 @@
         </div>
     </div>
 
-    <footer class="text-center ">
-        <a href="https://joylee.herokuapp.com " target="_blank ">Created by Joyce Lee | 2019</a>
-    </footer>
+    <footer class="text-center padding ">
+            <a href="https://joylee.herokuapp.com " target="_blank ">Created by Joyce Lee | 2019</a>
+        </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js "></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js " integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1 " crossorigin="anonymous "></script>
