--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
             </div>
         </div>
 
-        <footer class="text-center ">
+        <footer class="text-center padding ">
             <a href="https://joylee.herokuapp.com " target="_blank ">Created by Joyce Lee | 2019</a>
         </footer>
 
