--- a/index.html
+++ b/index.html
@@ -48,13 +48,14 @@
 
 
 
-    <ul class="text-center" style="list-style-type:none;">
-        <li><a href="portfolio.html">Projects</a></li>
-        <li><a href="about.html">About Me</a></li>
-        <li><a href="contact.html">Contact Me</a></li>
+    <ul class="text-center" style="list-style-type:none; line-height: 30vw; font-size: 10vw">
+        <li><a style=" 
+            right: 0;" href="portfolio.html">P R O J E C T S</a></li>
+        <li><a href="about.html">A B O U T</a></li>
+        <li><a href="contact.html">C O N T A C T</a></li>
     </ul>
 
-    <footer class="text-center">
+    <footer class="text-center padding">
         <a href="https://joylee.herokuapp.com" target="_blank">Created by Joyce Lee | 2019</a>
     </footer>
 
